[gd_scene load_steps=21 format=2]

[ext_resource path="res://characters/customers/effects/love_aura/love_aura.tscn" type="PackedScene" id=1]
[ext_resource path="res://interfaces/82377__gynation__paper-flip-1.wav" type="AudioStream" id=2]
[ext_resource path="res://interfaces/ninepatch_pokemon_darkyellow.png" type="Texture" id=3]
[ext_resource path="res://interfaces/ninepatch_yellow_w_black_border.png" type="Texture" id=4]
[ext_resource path="res://characters/customers/old_lady/sprite.png" type="Texture" id=5]
[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://interfaces/speckled_background_card.png" type="Texture" id=7]
[ext_resource path="res://interfaces/star.png" type="Texture" id=8]
[ext_resource path="res://tilesets/x_out_red.png" type="Texture" id=9]
[ext_resource path="res://interfaces/customer_card.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
resource_name = "delete_away"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 400.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 309 ), Vector2( 944, 565 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_away"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 400.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 309 ), Vector2( 944, 565 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.428571 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -240.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("NewLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.45, 0.7, 0.95, 1.2, 1.45, 1.7, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "simple_show"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("NewLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 1
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 6 )

[node name="Card" type="Node2D"]
pause_mode = 2
position = Vector2( 512, 309 )
z_index = 5
script = ExtResource( 10 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -8.98725, 3.53638 )
scale = Vector2( 1.42, 1.42 )
texture = ExtResource( 7 )

[node name="Card" type="NinePatchRect" parent="."]
modulate = Color( 0.847059, 0.996078, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.514
margin_top = -240.0
margin_right = 166.486
margin_bottom = 245.0
rect_pivot_offset = Vector2( 61.3459, -29.3358 )
texture = ExtResource( 4 )
patch_margin_left = 50
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Card"]
margin_left = 42.0
margin_top = 30.0
margin_right = 282.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Old Lady"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="Card"]
margin_left = 210.293
margin_top = 33.2929
margin_right = 310.293
margin_bottom = 55.2929
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Common"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PatienceLabel" type="Label" parent="Card"]
margin_left = 59.8726
margin_top = 415.0
margin_right = 159.873
margin_bottom = 437.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Patience"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Card/PatienceLabel"]
position = Vector2( -8, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite2" type="Sprite" parent="Card/PatienceLabel"]
position = Vector2( 12, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite3" type="Sprite" parent="Card/PatienceLabel"]
position = Vector2( 32, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite4" type="Sprite" parent="Card/PatienceLabel"]
position = Vector2( 52, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite5" type="Sprite" parent="Card/PatienceLabel"]
position = Vector2( 72, 24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="TipLabel" type="Label" parent="Card"]
margin_left = 254.0
margin_top = 415.0
margin_right = 354.0
margin_bottom = 437.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tips"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipDescription" type="Label" parent="Card/TipLabel"]
margin_left = -46.0
margin_top = 25.0
margin_right = 84.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0235294, 0.788235, 0.0666667, 1 )
text = "$"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Card"]
margin_left = 46.0
margin_top = 59.0
margin_right = 308.0
margin_bottom = 249.0
color = Color( 0.631373, 1, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitOutline" type="NinePatchRect" parent="Card"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.511
margin_top = -189.406
margin_right = 137.489
margin_bottom = 10.5944
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="Card"]
position = Vector2( 173.652, 148.588 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
hframes = 3
vframes = 4

[node name="LoveAura" parent="Card/Portrait" instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, 9 )
scale = Vector2( 0.3, 0.3 )

[node name="Details" type="VBoxContainer" parent="Card"]
margin_left = 59.0
margin_top = 280.0
margin_right = 294.0
margin_bottom = 380.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenericDescription" type="Label" parent="Card/Details"]
visible = false
margin_right = 235.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "She's late for her goat cafe appointment and doesn't have time for this."
autowrap = true

[node name="SpecialAbility" type="Label" parent="Card/Details"]
margin_right = 235.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Love Hearts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Card/Details/SpecialAbility"]
margin_top = 26.0
margin_right = 235.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "When very happy, makes surrounding customers happier "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/delete_away = SubResource( 5 )
anims/fade_away = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/new_anim = SubResource( 8 )
anims/simple_show = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = 176.0
margin_top = -240.0
margin_right = 190.0
margin_bottom = -226.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -153.0
margin_top = -288.0
margin_right = 187.0
margin_bottom = -243.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.564706, 1, 0.341176, 1 )
text = "New Customer!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
